# AdventOfCode

./: .gitignore  LICENSE  README.md  advent.py  config.py  day_03_2021.py  day_20_2020.py  db.pickle  go.py  pyproject.toml  requirements.txt  run.py  times.pickle
adventofcode/: config.py
framework/: console.py  exceptions.py  helpers.py  input_helper.py  make_readme.py
lib/: allen.py  asciimap.py  characters.py  dualdict.py  iterators.py  linkedlist.py  shared.py
template/: problem.py.txt  problem2.py.txt
util/: console.py  graph.py  helpers.py  input_helper.py  make_readme.py  shared.py
year_2018/: day_01_2018.py  day_02_2018.py  day_03_2018.py  day_04_2018.py  day_05_2018.py  day_06_2018.py  day_07_2018.py  day_08_2018.py  day_09_2018.py  day_10_2018.py
year_2019/: day_01_2019.py  day_02_2019.py  day_03_2019.py  day_04_2019.py  day_05_2019.py  day_06_2019.py  day_07_2019.py  day_08_2019.py  day_09_2019.py  day_10_2019.py  day_11_2019.py  day_12_2019.py  day_13_2019.py  day_14_2019.py  day_15_2019.py  day_16_2019.py  day_17_2019.py  day_18_2019.py  intcode.py
year_2020/: day_01_2020.py  day_02_2020.py  day_03_2020.py  day_04_2020.py  day_05_2020.py  day_06_2020.py  day_07_2020.py  day_08_2020.py  day_09_2020.py  day_10_2020.py  day_11_2020.py  day_12_2020.py  day_13_2020.py  day_14_2020.py  day_15_2020.py  day_16_2020.py  day_17_2020.py  day_18_2020.py  day_19_2020.py  day_20_2020.py  day_21_2020.py  day_22_2020.py  day_23_2020.py  day_24_2020.py  day_25_2020.py
year_2021/: 24.xlsx  day_01_2021.py  day_02_2021.py  day_03_2021.py  day_04_2021.py  (+20 more)
(+84 files in other folders)
