[tool.poetry]
name = "AdventOfCode"
version = "0.1.0"
description = ""
authors = ["Thomas Vos <vossy01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^10.16.1"
requests = "^2.26.0"
tqdm = "^4.62.3"
disjoint-set = "^0.7.3"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
